@@ -1,3 +1,9 @@
+2005-10-23  Mark Mitchell  <mark@codesourcery.com>
+
+	* qm/test/result.py (Result.SetOutcome): Use SetCause.
+	(Result.SetCause): New method.
+	(Result.NoteException): Use SetCause.
+
 2005-10-18  Stefan Seefeld  <stefan@codesourcery.com>
 
 	* qm/test/cmdline.py: Fix handling of '.' pseudo-id.
